# My_page

./: .gitignore  README.md
01_SfM_reconstruction/: CMakeLists.txt  README.md
01_SfM_reconstruction/forms/: mainwindow.ui
01_SfM_reconstruction/include/: CloudMaker.h  PointFinderr.h  PointReconstructor.h  reconstmanager.h
01_SfM_reconstruction/src/: CloudMaker.cpp  PointFinderr.cpp  PointReconstructor.cpp  mainwindow.cpp  reconstmanager.cpp
02_ECAD_detection/: README.md
02_HES_detection/: .gitignore  README.md  requirements.txt
02_HES_detection/connection_detection/: Matrix.ipynb  README.md
02_HES_detection/model_training/: README.md
02_HES_detection/synthetic_data_generator/: .gitignore  CMakeLists.txt  README.md  config.json
02_HES_detection/synthetic_data_generator/include/: ConfigLoader.h  DatasetGenerator.h  makeJson.h
02_HES_detection/synthetic_data_generator/src/: ConfigLoader.cpp  DatasetGenerator.cpp  main.cpp  makeJson.cpp
03_ConvLSTM_raincast/: .gitignore  README.md  main.py
03_ConvLSTM_raincast/src/architectures/: ConvLSTM.py  ConvRNN.py  PeepholeConvLSTM.py  PeepholeConvLSTM2.py
03_ConvLSTM_raincast/src/data_modules/: data_exploration.py  data_module_iteracja_0.py  extract_frames.py  vizualization.py
03_ConvLSTM_raincast/src/predictors/: RainPredictor.py
03_ConvLSTM_raincast/src/utils/: Logger.py
03_RNN_raincast/: .gitignore  README.md  requirements.txt  train.py
03_RNN_raincast/configs/: default.yaml
03_RNN_raincast/notebooks/: GSN_projekt.ipynb  demo.ipynb
03_RNN_raincast/outputs/hydra_tests_sample/.hydra/: config.yaml  hydra.yaml
03_RNN_raincast/outputs/hydra_tests_sample/model/: model_sample.ckpt
03_RNN_raincast/src/architectures/: ConvRNN.py  conv_lstm.py  peephole_conv_lstm.py
03_RNN_raincast/src/data_modules/: SEVIR_data_loader.py
03_RNN_raincast/src/predictors/: rain_predictor.py
03_RNN_raincast/wandb/run-20250817_002155-d5axrl2x/: run-d5axrl2x.wandb
03_RNN_raincast/wandb/run-20250817_002155-d5axrl2x/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
04_Mouse_Anomalies/: .gitignore  README.md  project.ipynb  requirements.txt
04_Mouse_Anomalies/configs/: default.yaml
04_Mouse_Anomalies/src/: data_preparation.py  testing.py  trainers.py
05_LLM_phishing_study/: EADME.md
